--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="description" content="Добро пожаловать в наш грузинский ресторан! У нас вы можете попробовать традиционные грузинские блюда в уютной атмосфере" />
+    <meta name="keywords" content="грузинский ресторан, грузинская кухня, хачапури, хинкали, грузинские блюда" />
+    <meta property="og:title" content="Chemi Mezobeli" />
+    <meta property="og:description" content="Аутентичный грузинский ресторан с собственной пекарней" />
+    <meta property="og:url" content="http://chemi-mezobeli.ru" /> 
+    <meta property="og:image" content="./images/logo (1).svg" />
     <title>Чеми Мезобели</title>
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./style/style.css" />
-
-
-    <!--//more meta//-->
-
-
   </head>
 
   <body>
