--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         class="link phone">
           +7 (903) 299-77-11
         </a>
-        <a href="mailto:chemicafe@mail.ru&subject=бронь стола Chemi Mezobeli"
+        <a href="mailto:chemicafe@mail.ru"
         class="link email">
           chemicafe@mail.ru
         </a>
